# minigo

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  add_sub_mul_div_mod.  log.txt  test
docs/: codegen.md
frontend/executor/: executor.py
frontend/generator/: errors.py  generator.py  generator.py.bak  types.py
frontend/parser_/: GoParser.g4
frontend/test/: test.go  test_for.go
src/: elf.rs  linker.rs  log.rs  main.rs  utils.rs
src/arch/: riscv64.rs
src/codegen/: error.rs  expr.rs  func.rs  mod.rs  program.rs  reg.rs  var.rs
src/codegen/arch/: riscv32.rs
src/ir/: mod.rs  virtual_reg.rs
testcases/: .gitignore  Makefile  add.c  add_many_regs.c  add_sub_mul_div_mod  add_sub_mul_div_mod.c  call.c  call_1.c  div.c  driver.sh  equal.c  few_regs.c  fib.c  gle.c  glt.c  hello_world.c  icmp  icmp.c  if  if.c  linker.ld  many_registers.c  mul.c  sle.c  slt.c  sub.c  test.c  unary.c  while.c
