[package]
name = "MinimalGo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-ir = { version = "0.8.1", features = ["llvm-10"] }
bit_field = { version = "0.10.1" }
log4rs = { version = "1.1.1" }

[features]
default = []
riscv32 = []
riscv64 = []
